# OStimNG

./: .gitignore  .gitmodules  OStim_CI.ppj  README.md  move-dll.ps1  move-flash.ps1
skse/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
skse/cmake/: version.rc.in
skse/src/: Core.cpp  Core.h  Main.cpp  PCH.h  SKEE.h  Util.cpp  Util.h
skse/src/ActorProperties/: ActorProperty.h  ActorPropertyList.h  ActorPropertyTable.cpp  ActorPropertyTable.h
skse/src/Alignment/: ActorAlignment.h  ActorKey.cpp  ActorKey.h  Alignments.cpp  Alignments.h  NodeAlignment.h  ThreadAlignment.h  ThreadKey.cpp  ThreadKey.h
skse/src/Config/: Config.cpp  Config.h
skse/src/Core/: AutoModeStage.h  Core.cpp  Core.h  EquipObjectHandler.cpp  EquipObjectHandler.h  ExpressionUpdater.cpp  ExpressionUpdater.h  Singleton.h  Thread.cpp  Thread.h  ThreadActor.cpp  ThreadActor.h  ThreadActorFlag.h  ThreadFlag.h  ThreadInterface.cpp  ThreadInterface.h  ThreadManager.cpp  ThreadManager.h
skse/src/Core/Thread/: ThreadActorManagement.cpp  ThreadActorSwap.cpp  ThreadAutoControl.cpp  ThreadAutoMode.cpp  ThreadClimax.cpp  ThreadFurniture.cpp  ThreadNavigation.cpp  ThreadSound.cpp
skse/src/Core/ThreadActor/: ThreadActorAPI.cpp  ThreadActorAnimation.cpp  ThreadActorClimax.cpp  ThreadActorEquipObjects.cpp  ThreadActorExcitement.cpp  ThreadActorExpression.cpp  ThreadActorSound.cpp
skse/src/Core/ThreadStarter/: DebugNPCThreadStarter.cpp  DebugNPCThreadStarter.h  NPCThreadStarter.cpp  NPCThreadStarter.h  PlayerThreadStarter.cpp  PlayerThreadStarter.h  ThreadBuilder.h  ThreadStartParams.cpp  ThreadStartParams.h  ThreadStarter.cpp  ThreadStarter.h
skse/src/Events/: EventListener.cpp  EventListener.h
skse/src/Furniture/: Furniture.cpp  Furniture.h  FurnitureOffset.h  FurnitureTable.cpp  FurnitureTable.h  FurnitureType.cpp  FurnitureType.h
skse/src/Game/: LocaleManager.cpp  LocaleManager.h  Locker.h  Patch.h
skse/src/GameAPI/: Game.cpp  Game.h  GameAPIUtil.h  GameActor.cpp  GameActor.h  GameActorBone.h  GameActorValue.h  GameArmor.cpp  GameArmor.h  GameCamera.cpp  GameCamera.h  GameCondition.h  GameDialogue.cpp  GameDialogue.h  GameEvents.cpp  GameEvents.h  GameFaction.cpp  GameFaction.h  GameGlobalVariable.h  GameHooks.cpp  GameHooks.h  GameItem.h  GameKeyword.h  GameList.h  GameObject.cpp  GameObject.h  GameObjectMarkerType.h  GameOwnership.h  GamePointer.h  GamePosition.cpp  GamePosition.h  GameQuest.h  GameRace.h  GameRecord.h  GameRecordIdentifier.cpp  GameRecordIdentifier.h  GameSerializationInterface.h  GameSex.cpp  GameSex.h  GameSlotMask.cpp  (+10 more)
skse/src/GameLogic/: GameHooks.cpp  GameHooks.h  GameTable.cpp  GameTable.h
skse/src/Graph/: Action.cpp  Action.h  ActionActor.h  ActionAttributes.cpp  ActionAttributes.h  Event.cpp  Event.h  GraphActor.cpp  GraphActor.h  GraphActorTag.cpp  GraphActorTag.h  GraphTable.cpp  GraphTable.h  LookupTable.cpp  LookupTable.h  Node.cpp  Node.h  NodeTag.cpp  NodeTag.h  Option.h  RawNavigation.h  Requirement.h  Role.h  RoleMap.h  Sequence.cpp  Sequence.h  SequenceEntry.h
skse/src/Graph/Action/: Action.cpp  Action.h  ActionActor.cpp  ActionActor.h  ActionAttributes.cpp  ActionAttributes.h  ActionTag.cpp  (+1 more)
skse/src/InterfaceSpec/: IPluginInterface.h  PluginInterface.cpp  PluginInterface.h
skse/src/MCM/: MCMSetting.cpp  MCMSetting.h  MCMTable.cpp  MCMTable.h
skse/src/Messaging/: IMessages.h  MessagingRegistry.cpp
skse/src/ModAPI/: OstimNG-API-Main.cpp  OstimNG-API-Main.h  OstimNG-API-Scene.cpp  OstimNG-API-Scene.h  OstimNG-API-Thread.cpp  OstimNG-API-Thread.h
skse/src/Papyrus/: Papyrus.cpp  Papyrus.h  PapyrusActionData.h  PapyrusActor.h  PapyrusActorUtil.h  PapyrusAlign.h  PapyrusCamera.h  PapyrusControl.h  PapyrusData.h  PapyrusDatabase.h  PapyrusEvent.h  PapyrusFace.h  PapyrusFurniture.h  PapyrusIntUtil.h  PapyrusJson.h  PapyrusLibrary.h  PapyrusMetadata.h  PapyrusObject.h  PapyrusPlayerThread.h  PapyrusScenes.h  PapyrusSequence.h  PapyrusSettings.h  PapyrusThread.h  PapyrusThreadActor.h  PapyrusThreadBuilder.h  PapyrusToys.h  PapyrusUndress.h  PapyrusUtil.h  PapyrusUtility.h  Script.h
skse/src/PluginInterface/: InterfaceExchangeMessage.h  InterfaceMap.h  PluginInterface.h
skse/src/PluginInterfaceImplementation/: InterfaceMapImpl.cpp  InterfaceMapImpl.h
skse/src/ScriptAPI/: ActionDataScript.cpp  ActionDataScript.h  ActorScript.cpp  ActorScript.h  JsonScript.cpp  JsonScript.h  LibraryScript.cpp  LibraryScript.h  MetadataScript.cpp  MetadataScript.h  PlayerThreadScript.cpp  PlayerThreadScript.h  SettingsScript.cpp  SettingsScript.h  ThreadScript.cpp  ThreadScript.h
skse/src/Serial/: ActorData.h  Manager.cpp  Manager.h  OldThread.h
skse/src/Serialization/: DeserializationInfo.h  ResetInfo.h  SerializationInfo.h
skse/src/Settings/: AddonPage.cpp  AddonPage.h  SettingTable.cpp  SettingTable.h
skse/src/SexToys/: ToyGroup.cpp  ToyGroup.h  ToyHandler.cpp  ToyHandler.h  ToyTable.cpp  ToyTable.h  ToyThread.cpp  ToyThread.h  ToyWrapper.cpp  ToyWrapper.h
skse/src/Sound/: DialogueSet.h  ReactionSet.h  SoundSet.h  SoundTable.cpp  SoundTable.h  SoundUtil.cpp  SoundUtil.h  VoiceSet.cpp  VoiceSet.h
skse/src/Threading/: Metadata.h
skse/src/Trait/: ActorOverride.h  ActorProperty.h  ActorPropertyList.h  Condition.cpp  Condition.h  EquipObject.h  FacialExpression.cpp  FacialExpression.h  Requirement.h  TraitTable.cpp  TraitTable.h  VoiceSet.h
skse/src/UI/: OStimMenu.cpp  OStimMenu.h  Settings.cpp  Settings.h  UIInterop.h  UIState.cpp  UIState.h
skse/src/Util/: APITable.cpp  APITable.h  ActorUtil.cpp  ActorUtil.h  CameraUtil.cpp  CameraUtil.h  CheckSum.cpp  CheckSum.h  CompatibilityTable.cpp  CompatibilityTable.h  Constants.h  ControlUtil.cpp  ControlUtil.h  EventUtil.h  ExtraDataUtil.h  FormUtil.cpp  FormUtil.h  Globals.cpp  Globals.h  IDGenerator.cpp  IDGenerator.h  IDMap.h  Integrity.cpp  Integrity.h  JsonFileLoader.h  JsonUtil.cpp  JsonUtil.h  LegacyUtil.cpp  LegacyUtil.h  LookupTable.cpp  LookupTable.h  MCMTable.cpp  MCMTable.h  MapUtil.h  MathUtil.cpp  MathUtil.h  ObjectRefUtil.cpp  ObjectRefUtil.h  RNGUtil.h  SerializationUtil.cpp  (+7 more)
(+1940 files in other folders)
